<resources>
    <string name="app_name">Certification Android Core Job Scheduler</string>
    <string name="job_schedule_notification_channel">Notification Channel</string>
    <string name="job_schedule_notification_description">Notification Description</string>
    <string name="main_activity_network_type">Network Type Required</string>
    <string name="main_activity_network_type_none">None</string>
    <string name="main_activity_network_type_any">Any</string>
    <string name="main_activity_network_type_wifi">Wifi</string>
    <string name="main_activity_network_requires">Requires:</string>
    <string name="main_activity_network_device_idle">Device Idle</string>
    <string name="main_activity_network_device_charging">Device Charging</string>
    <string name="main_activity_network_device_override_deadline">Override Deadline:</string>
    <string name="main_activity_network_device_current_value">Not Set</string>
    <string name="main_activity_network_device_schedule_job_button">Schedule Job</string>
    <string name="main_activity_network_device_cancel_job_button">Cancel Jobs</string>
    <string name="main_activity_job_scheduled_message">Job Scheduled</string>
    <string name="main_activity_job_canceled_message">Job Cancelled</string>
    <string name="main_activity_job_title">Job Title</string>
    <string name="main_activity_job_content_text">Your job ran to completion</string>
    <string name="main_activity_job_schedule_missing_constraint_message">Set at least one constraint</string>

</resources>
