<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/main_activity_network_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">
        <RadioButton
                android:text="@string/main_activity_network_type_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButtonNone" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/main_activity_network_type_any"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButtonAny" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/main_activity_network_type_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButtonWifi" android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/main_activity_network_requires"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="9dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2"/>
    <Switch
            android:text="@string/main_activity_network_device_idle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchIdle"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <Switch
            android:text="@string/main_activity_network_device_charging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchCharging"
            app:layout_constraintBaseline_toBaselineOf="@+id/switchIdle" android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/switchIdle"/>
    <TextView
            android:text="@string/main_activity_network_device_override_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="9dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/switchIdle"/>
    <Button
            android:text="@string/main_activity_network_device_schedule_job_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_jobschedule"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintHorizontal_bias="0.51" app:layout_constraintVertical_bias="0.021"/>
    <Button
            android:text="@string/main_activity_network_device_cancel_job_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel_jobs"
            app:layout_constraintStart_toStartOf="@+id/btn_jobschedule" android:layout_marginTop="6dp"
            android:layout_marginStart="3dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_jobschedule"/>
    <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
</androidx.constraintlayout.widget.ConstraintLayout>